# DailyDigest

./: .gitignore  DELIVERY_SETUP.md  FRONTEND_SETUP.md  README.md  api_server.py  check_chat.py  get_chat_id.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Features.css  Features.jsx  Hero.css  Hero.jsx  Navbar.css  Navbar.jsx  SubscriptionForm.css  SubscriptionForm.jsx
src/dailydigest/: __init__.py  config.py  logging.py
src/dailydigest/cli/: deliver.py  digest.py  process.py  scrape.py
src/dailydigest/models/: __init__.py  db.py  ingestion.py
src/dailydigest/services/: clustering.py  database.py  digest.py  email.py  embeddings.py  ingestion.py  scoring.py  telegram.py
src/dailydigest/tools/adapters/: __init__.py  hackernews.py  rss.py
src/dailydigest/utils/: text.py
