[project]
name = "dailydigest"
version = "0.1.0"
description = "Local-first AI intelligence digest system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "ollama>=0.4.5",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=21.10",
    "scikit-learn>=1.6.2",
    "sentence-transformers>=3.3.1",
    "sqlalchemy>=2",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "torch>=2.5.1",
    "typer>=0.21.1",
]

[project.scripts]
dailydigest-scrape = "dailydigest.cli.scrape:app"
dailydigest-process = "dailydigest.cli.process:app"
dailydigest-digest = "dailydigest.cli.digest:app"
dailydigest-deliver = "dailydigest.cli.deliver:app"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
